# GameEngineOGL

./: CMakeLists.txt  README.md
dependencies/glad/: glad.h
src/: EngineLibrary.h  config.h  main.cpp
src/Components/: Object.cpp  Object.h  Transform.h
src/Engine/: EngineCore.cpp  EngineCore.h  EngineObject.cpp  EngineObject.h  InputManager.cpp  InputManager.h  Renderer.cpp  Renderer.h
src/Engine/EngineScripts/: EngineScriptsConfig.h  Skybox.cpp  Skybox.h  camera.cpp  camera.h
src/Engine/Scripts/: Scripts.h  TestScript.cpp
src/Meshes/: Mesh.cpp  Mesh.h  meshConfig.h
src/Meshes/materials/: material.cpp  material.h
src/Meshes/meshTypes/: Box.cpp  Box.h
src/Shaders/: shader.cpp  shader.h
src/Shaders/shaders/: fragment.txt  vertex.txt
src/includes/glad/: glad.c
